--- a/zhihuijiayuan/app/build.gradle
+++ b/zhihuijiayuan/app/build.gradle
@@ -252,4 +252,7 @@ dependencies {
 
 
     api 'com.tencent.tbs.tbssdk:sdk:43697'
+
+    //rv侧滑
+    implementation 'com.github.anzaizai:EasySwipeMenuLayout:1.1.4'
 }
