--- a/zhihuijiayuan/app/build.gradle
+++ b/zhihuijiayuan/app/build.gradle
@@ -118,26 +118,15 @@ dependencies {
     implementation 'com.facebook.fresco:fresco:0.12.0'
     implementation 'com.facebook.fresco:animated-gif:0.12.0'
 
-    //等待框
 
-    //    implementation 'com.github.gittjy:LoadingDialog:1.0.2'
-
-    //    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
-
-    //    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
     implementation 'com.google.code.gson:gson:2.2.4'
 
     //右滑返回
     implementation 'me.imid.swipebacklayout.lib:library:1.0.0'
 
     //图片选择器
-    implementation 'com.jaikydota.imagespickers:imagespickers:1.0.6'
+//    implementation 'com.jaikydota.imagespickers:imagespickers:1.0.6'
 
-    //如果使用图片加载框架，添加依赖，下面用Glide示例
-
-    //    implementation 'com.github.bumptech.glide:glide:4.9.0'
-
-    //    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'com.belerweb:pinyin4j:2.5.0'
 
     //跑马灯效果
@@ -147,7 +136,6 @@ dependencies {
     implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
 
-    //    implementation files('libs/jcore-android-1.2.0.jar')
 
     //极光推送
     implementation 'cn.jiguang.sdk:jpush:3.3.4'
@@ -211,9 +199,6 @@ dependencies {
     //butterknife
     implementation 'com.jakewharton:butterknife:8.4.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
-
-    //扫码
-//    implementation project(':zbar')
 
     //adapter
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
