--- a/zhihuijiayuan/app/src/main/AndroidManifest.xml
+++ b/zhihuijiayuan/app/src/main/AndroidManifest.xml
@@ -434,10 +434,13 @@
 
 
         <!-- User defined.  For test only  用户自定义接收消息器,3.0.7开始支持,目前新tag/alias接口设置结果会在该广播接收器对应的方法中回调-->
-        <receiver android:name=".service.MyJPushMessageReceiver">
+        <receiver
+            android:name=".service.MyJPushMessageReceiver"
+            android:enabled="true"
+            android:exported="false" >
             <intent-filter>
-                <action android:name="cn.jpush.android.intent.RECEIVE_MESSAGE"/>
-                <category android:name="${applicationId}"></category>
+                <action android:name="cn.jpush.android.intent.RECEIVE_MESSAGE" />
+                <category android:name="${applicationId}"/>
             </intent-filter>
         </receiver>
 
