--- a/zhihuijiayuan/app/build.gradle
+++ b/zhihuijiayuan/app/build.gradle
@@ -55,9 +55,9 @@ android {
         multiDexEnabled true
 
         manifestPlaceholders = [
-                JPUSH_PKGNAME : "tendency.hz.zhihuijiayuan",
+                JPUSH_PKGNAME: "tendency.hz.zhihuijiayuan",
                 JPUSH_APPKEY : "b4fa2277335d8b97fb7e6705", //JPush 上注册的包名对应的 Appkey.
-                JPUSH_CHANNEL : "developer-default", //暂时填写默认值即可.
+                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
         ]
 
         ndk {
@@ -103,7 +103,7 @@ dependencies {
     implementation 'com.android.support:support-compat:28.0.0'
 
     //NoHttp
-    implementation 'com.yanzhenjie.nohttp:nohttp:1.1.1'
+    implementation 'com.yanzhenjie.nohttp:nohttp:1.1.11'
 
     //权限获取
     annotationProcessor 'com.zhy:mpermission-compiler:1.0.0'
@@ -139,11 +139,8 @@ dependencies {
 
     //极光推送
     implementation 'cn.jiguang.sdk:jpush:3.3.4'
-
-    // 此处以JPush 3.3.4 版本为例。
     implementation 'cn.jiguang.sdk:jcore:2.1.2'
 
-    // 此处以JCore 2.1.2 版本为例。
     implementation 'org.jetbrains:annotations:15.0'
 
     //微信支付
@@ -188,10 +185,6 @@ dependencies {
     //分包
     implementation 'com.android.support:multidex:1.0.1'
 
-    //zxing
-//    implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.6'
-//    implementation 'cn.bingoogolapple:bga-baseadapter:1.2.9@aar'
-//    implementation 'cn.bingoogolapple:bga-flowlayout:1.0.0@aar'
 
     //蓝牙通讯
 
@@ -229,14 +222,12 @@ dependencies {
 
     //内存泄露
 
-    //    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
-
-    //    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
-
-    //    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.6.3'
+//    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.3'
+//    debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.3'
+    //伪蓝牙
     implementation files('libs/blecomm-api.jar')
-
-
+    //腾讯x5
     api 'com.tencent.tbs.tbssdk:sdk:43697'
 
     //rv侧滑
