修复部分机型扫描身份证横竖屏切换页面销毁

--- a/zhihuijiayuan/app/src/main/AndroidManifest.xml
+++ b/zhihuijiayuan/app/src/main/AndroidManifest.xml
@@ -155,7 +155,7 @@
             android:screenOrientation="portrait"/>
         <activity
             android:name="tendency.hz.zhihuijiayuan.view.set.ValidateActivity"
-
+            android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"/>
         <activity
             android:name="tendency.hz.zhihuijiayuan.view.user.ResetPwdActivity"
