--- a/zhihuijiayuan/local.properties
+++ b/zhihuijiayuan/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 26 20:26:12 CST 2019
-ndk.dir=C\:\\Software\\sdk\\ndk-bundle
-sdk.dir=C\:\\Software\\sdk
+#Fri Mar 06 11:55:54 CST 2020
+ndk.dir=D\:\\soft\\sdk\\ndk-bundle
+sdk.dir=D\:\\soft\\sdk
