--- a/zhihuijiayuan/local.properties
+++ b/zhihuijiayuan/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 06 11:55:54 CST 2020
+#Thu Mar 26 09:43:30 CST 2020
 ndk.dir=D\:\\soft\\sdk\\ndk-bundle
-sdk.dir=D\:\\soft\\sdk
+sdk.dir=C\:\\Software\\sdk
